--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
               <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#about">About</a>
+              <a class="nav-link js-scroll-trigger" href="#about">Guide</a>
             </li>
           </ul>
         </div>
