--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <!-- Custom fonts for this template -->
     <link href="vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
-    <link href="https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet" type="text/css">
+    <!-- <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet" type="text/css"> -->
 
     <!-- Custom styles for this template -->
     <link href="css/freelancer.min.css" rel="stylesheet">
@@ -31,9 +31,6 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#page-top">About</a>
-            </li>
-            <li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="#download">Download</a>
             </li>
             <li class="nav-item">
@@ -41,6 +38,9 @@
             </li>
             <li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link js-scroll-trigger" href="#about">Guide</a>
             </li>
           </ul>
         </div>
@@ -73,12 +73,12 @@
             </span>
             <ul class="list_download">
               <li>
-                <a href="https://play.google.com/store/apps/details?id=com.airjob.employee" target="_blank">
+                <a href="" target="_blank">
                   <img src="img/google_play.png" alt="google play"  title="google play">
                 </a>
               </li>
               <li>
-                <a href="https://itunes.apple.com/us/app/airjob/id1268227899" target="_blank">
+                <a href="" target="_blank">
                   <img src="img/app_store.png" alt="app store" title="app store">
                 </a>
               </li>
@@ -91,12 +91,12 @@
             </span>
             <ul class="list_download">
                 <li>
-                  <a href="https://play.google.com/store/apps/details?id=com.airjob.employer" target="_blank">
+                  <a href="" target="_blank">
                     <img src="img/google_play.png" alt="google play"  title="google play">
                   </a>
                 </li>
                 <li>
-                  <a href="https://itunes.apple.com/us/app/airboss/id1268233185" target="_blank">
+                  <a href="" target="_blank">
                     <img src="img/app_store.png" alt="app store" title="app store">
                   </a>
                 </li>
